--- a/src/app/components/equipo/equipo.component.html
+++ b/src/app/components/equipo/equipo.component.html
@@ -12,30 +12,36 @@
         </div>
     </header>
 
-    <div class="actions-toolbar">
-        <button class="btn-secondary-action" (click)="verInscritos()">
-            <i class="bi bi-people"></i> <span>Ver Inscritos</span>
-        </button>
+    @if(authService.isCapitan()){
+        <div class="actions-toolbar">
+            <button class="btn-secondary-action" (click)="verInscritos()">
+                <i class="bi bi-people"></i> <span>Ver Inscritos</span>
+            </button>
 
-        <button class="btn-secondary-action" (click)="abrirModalColores()"> <i class="bi bi-palette"></i>
-            <span>Colores</span>
-        </button>
+            <button class="btn-secondary-action" (click)="abrirModalColores()"> <i class="bi bi-palette"></i>
+                <span>Colores</span>
+            </button>
 
-        <button class="btn-primary-action" (click)="abrirModalCrearEquipo()"> <i class="bi bi-plus-lg"></i>
-            <span>Añadir Equipo</span>
-        </button>
-    </div>
+            <button class="btn-primary-action" (click)="abrirModalCrearEquipo()"> <i class="bi bi-plus-lg"></i>
+                <span>Añadir Equipo</span>
+            </button>
+        </div>
+    }
 
     @if (equipos.length > 0 && equipos) {
         <div class="teams-grid">
             @for (equipo of equipos; track equipo.idEquipo) {
                 <article class="team-card">
-                    <button class="btn-delete-card" title="Eliminar equipo" (click)="abrirModalEliminar(equipo.idEquipo)">
-                        <i class="bi bi-trash"></i>
-                    </button>
-                    <button class="btn-edit-card" title="Editar equipo" (click)="abrirModalEditar(equipo.idEquipo)">
-                        <i class="bi bi-pencil-fill"></i>
-                    </button>
+
+                    @if(authService.isCapitan()){
+                        <button class="btn-delete-card" title="Eliminar equipo" (click)="abrirModalEliminar(equipo.idEquipo)">
+                            <i class="bi bi-trash"></i>
+                        </button>
+                        <button class="btn-edit-card" title="Editar equipo" (click)="abrirModalEditar(equipo.idEquipo)">
+                            <i class="bi bi-pencil-fill"></i>
+                        </button>
+                    }
+
                     <div class="card-top">
                         <div class="team-avatar">
                             <i class="bi bi-shield-fill"></i>
@@ -439,9 +445,11 @@
                             </div>
                         </div>
 
-                        <button class="btn-delete-color" title="Expulsar del equipo" (click)="eliminarMiembroDeEquipo(miembro.idMiembroEquipo)">
-                            <i class="bi bi-trash"></i>
-                        </button>
+                        @if(authService.isCapitan()){
+                            <button class="btn-delete-color" title="Expulsar del equipo" (click)="eliminarMiembroDeEquipo(miembro.idMiembroEquipo)">
+                                <i class="bi bi-trash"></i>
+                            </button>
+                        }
                     </div>
                 }
 
@@ -455,7 +463,7 @@
         </div>
         
         <div class="modal-footer footer-form">
-            @if(authService.isAdmin()){
+            @if(authService.isCapitan()){
                 <form class="add-color-form" #miembrosForm="ngForm">
                 <div class="input-wrapper w-100">
                     <i class="bi bi-person-plus input-icon"></i>
