--- a/src/app/components/pagos.component/pagos.component.html
+++ b/src/app/components/pagos.component/pagos.component.html
@@ -1,83 +1,89 @@
 <div class="main-container">
 
-  <!-- Sección: Gestionar Precio -->
-  <div class="card-container blue-card container">
-    <form #precioForm="ngForm">
+  <div class="pagos-layout">
 
-      <h1>Gestiona el precio de una actividad</h1>
+    <div class="bubble-card bubble-precio">
+      <!-- formulario de precio -->
+       <form #precioForm="ngForm">
 
-      <div class="form-group">
-        <label>Elige el evento</label>
-        <select name="eventosPrecio" #eventoPrecio (change)="seleccionarEventoPrecio()">
-          <option value="" disabled selected>-- Selecciona un evento --</option>
-          <option *ngFor="let evento of eventosPrecios" [value]="evento.idEvento">
-            {{ evento.fechaEvento }}
-          </option>
-        </select>
-      </div>
+        <h1>Asigna precio a una actividad</h1>
 
-      <div class="form-group">
-        <label>Elige la actividad</label>
-        <select name="actividadesPrecio" #actividadPrecio>
-          <option value="" disabled selected>-- Selecciona una actividad --</option>
-          <option *ngFor="let actividad of actividadesPrecios" [value]="actividad.idActividad">
-            {{ actividad.nombreActividad }}
-          </option>
-        </select>
-      </div>
+        <div class="form-group">
+          <label>Elige el evento</label>
+          <select name="eventosPrecio" #eventoPrecio (change)="seleccionarEventoPrecio()">
+            <option value="" disabled selected>-- Selecciona un evento --</option>
+            <option *ngFor="let evento of eventosPrecios" [value]="evento.idEvento">
+              {{ evento.fechaEvento }}
+            </option>
+          </select>
+        </div>
 
-      <div class="form-group">
-        <label>¿Cuánto va a costar esta actividad?</label>
-        <input type="number" name="precio" #precioInput min="0" />
-      </div>
+        <div class="form-group">
+          <label>Elige la actividad</label>
+          <select name="actividadesPrecio" #actividadPrecio>
+            <option value="" disabled selected>-- Selecciona una actividad --</option>
+            <option *ngFor="let actividad of actividadesPrecios" [value]="actividad.idActividad">
+              {{ actividad.nombreActividad }}
+            </option>
+          </select>
+        </div>
 
-      <button type="button" (click)="insertarPrecio()">Insertar precio</button>
+        <div class="form-group">
+          <label>¿Cuánto va a costar esta actividad?</label>
+          <input type="number" name="precio" #precioInput min="0" />
+        </div>
 
-    </form>
+        <button type="button" (click)="insertarPrecio()">Asignar</button>
+
+      </form>
+    </div>
+
+    <div class="bubble-card bubble-pago">
+      <!-- formulario de pago -->
+       <form #pagoForm="ngForm">
+
+        <h1>Gestiona el pago de una actividad</h1>
+
+        <div class="form-group">
+          <label>Elige el evento</label>
+          <select name="eventosPago" #eventoPago (change)="seleccionarEventoPago()">
+            <option value="" disabled selected>-- Selecciona un evento --</option>
+            <option *ngFor="let evento of eventosPagos" [value]="evento.idEvento">
+              {{evento.fechaEvento}}
+            </option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <label>Elige la actividad</label>
+          <select name="actividadesPago" #actividadPago (change)="calcularCoste()">
+            <option value="" disabled selected>-- Selecciona una actividad --</option>
+            <option *ngFor="let actividad of actividadesPagos" [value]="actividad.idActividad">
+              {{actividad.nombreActividad}}
+            </option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <label>Elige el curso</label>
+          <select name="cursosPago" #cursosPago>
+            <option *ngFor="let curso of cursos" [value]="curso.idCurso">
+              {{curso.nombre}}
+            </option>
+          </select>
+        </div>
+
+        <button type="button" (click)="insertarPago()">Pagar</button>
+
+      </form>
+    </div>
   </div>
 
-  <!-- Sección: Gestionar Pago -->
-  <div class="card-container blue-card container">
-    <form #pagoForm="ngForm">
-
-      <h1>Gestiona el pago de una actividad</h1>
-
-      <div class="form-group">
-        <label>Elige el evento</label>
-        <select name="eventosPago" #eventoPago (change)="seleccionarEventoPago()">
-          <option value="" disabled selected>-- Selecciona un evento --</option>
-          <option *ngFor="let evento of eventosPagos" [value]="evento.idEvento">
-            {{evento.fechaEvento}}
-          </option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <label>Elige la actividad</label>
-        <select name="actividadesPago" #actividadPago (change)="calcularCoste()">
-          <option value="" disabled selected>-- Selecciona una actividad --</option>
-          <option *ngFor="let actividad of actividadesPagos" [value]="actividad.idActividad">
-            {{actividad.nombreActividad}}
-          </option>
-        </select>
-      </div>
-
-      <h3>{{mensaje}}</h3>
-
-      <div class="form-group">
-        <label>Elige el curso</label>
-        <select name="cursosPago" #cursosPago>
-          <option *ngFor="let curso of cursos" [value]="curso.idCurso">
-            {{curso.nombre}}
-          </option>
-        </select>
-      </div>
-
-      <button type="button" (click)="insertarPago()">Pagar</button>
-
-    </form>
+  <div *ngIf="mostrarToast" class="toast" [ngClass]="tipoToast">
+    <span class="icon-check">
+      {{ iconoToast }}
+    </span>
+    {{ toastMensaje }}
   </div>
-
-  
 
 </div>
